@@ -20,7 +20,13 @@ BUG FIXES
    o    Errors and seg faults could occur in grouping when
         j contained character or list() columns. Many thanks
         to Jim Holtman for providing a reproducible example.
-
+        
+   o    Setting a key on a table with over 268 million rows
+        (2^31/8) now works, #1714. Bug introduced in 1.7.2.
+        setkey now works (again) up to the regular R vector
+        limit of 2^31 rows (2 billion). Thanks to Leon Baum
+        for reporting.
+        
 
         *********************************************
         **                                         **
